# elusiv-rust-assignment

./: .gitignore  LICENSE
docs/: README.md
docs/Merkle_Tree/: merkle_tree.md
merkletree/: Cargo.toml
merkletree/src/: hashers.rs  lib.rs  utils.rs
merkletree/src/mtree/: node.rs  tree.rs
