[package]
authors = ["Matteo Pisani <matteo.pisani.91@gmail.com>"]
description = "elusiv rust assignment"
edition = "2021"
keywords = [
  "merkletree",
  "rust",
]
license = "MIT"
name = "merkletree"
readme = "../docs/README.md"
repository = "https://github.com/xonoxitron/merkletree"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
